# voynich-entropy

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.claude/: setttings.local.json
.devcontainer/: .env.example  Dockerfile  docker-compose.yaml  post-create.sh
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
notes/: Research Plan.md
voynich_entropy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
