[project]
name = "voynich-entropy"
version = "0.0.1"
description = "Voynich manuscript entropy analysis"
requires-python = "==3.12.*"

# Base dependencies — always installed (CPU + GPU)
dependencies = [
    "numpy>=2.1.2",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "Pillow>=10.0",
    "ipython>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[dependency-groups]
# Full BLT dependency set for GPU researchers
gpu = [
    "torch",
    "xformers",
    "altair>=5.5.0",
    "datatrove>=0.5.0",
    "fsspec>=2024.6.1",
    "huggingface-hub==0.30.*",
    "jinja2>=3.1.6",
    "lm-eval>=0.4.8",
    "luigi>=3.6.0",
    "omegaconf>=2.3.0",
    "orjson>=3.10.18",
    "pydantic>=2.11.4",
    "pynvml>=12.0.0",
    "rich>=14.0.0",
    "s3fs>=2024.6.1",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "submitit>=1.5.2",
    "tiktoken>=0.8.0",
    "typer>=0.15.3",
    "viztracer>=1.0.3",
    "wandb>=0.19.10",
]
dev = [
    "black==24.8.0",
    "isort>=6.0.1",
    "ruff>=0.4.0",
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = []  # Root project has no importable packages itself
